# vibe-kanban

./: .dockerignore  .gitignore  App.test.tsx  App.tsx  CLAUDE.md  Dockerfile  Makefile  README.md  constants.ts  docker-compose.yml  eslint.config.js  index.html  metadata.json  package-lock.json  package.json  requirements.txt  styles.ts  types.ts  vite-env.d.ts  vite.config.ts
backend/: app.py  database.json  pyproject.toml  test_app.py
components/: CategoryBadge.tsx  CategoryFilterDropdown.tsx  CategoryManagementModal.tsx  CategorySelect.tsx  ColorPicker.tsx  Column.test.tsx  Column.tsx  TaskCard.test.tsx  TaskCard.tsx  TaskModal.test.tsx  TaskModal.tsx
hooks/: api.ts  useCategories.ts  useClickOutside.ts  useDragAndDrop.test.ts  useDragAndDrop.ts  useOptimisticUpdate.ts  useTasks.test.ts  useTasks.ts
test/: setup.ts  utils.tsx
